--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Card</title>
+    <link rel="stylesheet" href="./css/main.css" type="text/css">
 </head>
 <body>
     <main>
-        <img src="./images/image-product-desktop.jpg" alt="product-image">
-        <div>
-            <p>PERFUME</p>
+        <img src="./images/image-product-mobile.jpg" class='mobimg' alt="product-image">
+        <img src="./images/image-product-desktop.jpg" class='deskimg' alt="product-image">
+        <div class='product_info'>
+            <p class="cartigory">PERFUME</p>
             <h1>Gabrielle Essence Eau De Parfum</h1>
-            <p>A floral, solar and composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+            <p class='price_des'>A floral, solar and composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
             <p><span class="current-price">$149.99</span><span class="old-price">$169.99</span></p>
             <button>
                 <img src="./images/icon-cart.svg" alt="cart-image">
